Deployment to vercel using github action

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h2><a href="">Sunshine</a></h2>
+      <h2><a href="">Sunshine Suraj</a></h2>
       <nav>
         <li><a href="">Home</a></li>
         <li><a href="#About">About</a></li>
