--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   </head>
   <body>
     <header>
-      <h2><a href="">Sunshine Suraj</a></h2>
+      <h2><a href="">Sunshine</a></h2>
       <nav>
-        <li><a href="">Home</a></li>
+        <li><a href="#Home">Home</a></li>
         <li><a href="#About">About</a></li>
         <li><a href="#Services">Service</a></li>
         <li><a href="#Contact">Contact</a></li>
       </nav>
     </header>
 
-    <section class="banner-area">
+    <section class="banner-area" id="Home">
       <div class="banner-img"></div>
       <h1>Mini Portfolio Website</h1>
       <h3>Responsive web design by Suraj Kumar Pradhan</h3>
